# MyStudyApp

./: build.gradle  config.gradle  jihmj.jks  settings.gradle  weather6.jks
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
batteryinfo/: build.gradle
batteryinfo/src/main/: AndroidManifest.xml
batteryinfo/src/main/res/layout/: activity_battery_main.xml  activity_shake_layout.xml
batteryinfo/src/main/res/values-night/: themes.xml
developtools/: build.gradle  developtools.jks
developtools/src/main/: AndroidManifest.xml
developtools/src/main/res/layout/: activity_main.xml  activity_tools_page.xml  current_activity_window_float_layout.xml  item_activity_info.xml  item_tools.xml
gradle/wrapper/: gradle-wrapper.properties
imapplication/: build.gradle  imapp.jks  proguard-rules.pro
imapplication/src/main/: AndroidManifest.xml
imapplication/src/main/cpp/: CMakeLists.txt  imlib.cpp
lib_base/: build.gradle
lib_base/src/main/: AndroidManifest.xml
lib_utils/: build.gradle
lib_utils/src/main/: AndroidManifest.xml
lib_video/: build.gradle
lib_video/src/main/: AndroidManifest.xml
mjihpart/: build.gradle  proguard-rules.pro
mjihpart/src/main/: AndroidManifest.xml
mjihpart/src/main/assets/: mij.txt
mvpart/: build.gradle  proguard-rules.pro
mvpart/src/main/: AndroidManifest.xml
weatherpart/: build.gradle  proguard-rules.pro
weatherpart/src/main/: AndroidManifest.xml
weightapp/: build.gradle
weightapp/src/main/: AndroidManifest.xml
(+317 files in other folders)
